Created reports modulle

--- a/irs-client/angular.json
+++ b/irs-client/angular.json
@@ -123,5 +123,8 @@
       }
     }
   },
-  "defaultProject": "irs-client"
+  "defaultProject": "irs-client",
+  "cli": {
+    "analytics": false
+  }
 }
