--- a/irs-client/package.json
+++ b/irs-client/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.12.1",
     "@fortawesome/free-regular-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "chart.js": "^2.9.3",
     "ngx-cookie-service": "^2.3.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
