--- a/irs-server/.vscode/settings.json
+++ b/irs-server/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "C:\\Users\\Hasnat Bashir\\.conda\\envs\\v-env\\python.exe",
+    "python.pythonPath": "C:\\Users\\hasna\\miniconda3\\envs\\v-env\\python.exe",
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": false
 }
